--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -45,6 +45,9 @@
     .modal-title{
       color: var(--text-primary);
     }
+    .form-text{
+      color: var(--text-primary);
+    }
     .form-check-label{
       color: var(--text-primary);
     }
