--- a/app/templates/shares.html
+++ b/app/templates/shares.html
@@ -128,13 +128,13 @@
           <div class="mb-3">
             <label for="valid_users{{ share.name }}" class="form-label">Valid Users</label>
             <input type="text" class="form-control" id="valid_users{{ share.name }}" name="valid_users" value="{{ share.valid_users }}">
-            <div class="form-text">Comma-separated list of users</div>
+            <div class="form-text help-text">Comma-separated list of users</div>
           </div>
           
           <div class="mb-3">
             <label for="write_list{{ share.name }}" class="form-label">Write List</label>
             <input type="text" class="form-control" id="write_list{{ share.name }}" name="write_list" value="{{ share.write_list }}">
-            <div class="form-text">Comma-separated list of users with write access</div>
+            <div class="form-text help-text">Comma-separated list of users with write access</div>
           </div>
           
           <div class="mb-3">
@@ -244,13 +244,13 @@
           <div class="mb-3">
             <label for="valid_users" class="form-label">Valid Users</label>
             <input type="text" class="form-control" id="valid_users" name="valid_users">
-            <div class="form-text">Comma-separated list of users</div>
+            <div class="form-text help-text">Comma-separated list of users</div>
           </div>
           
           <div class="mb-3">
             <label for="write_list" class="form-label">Write List</label>
             <input type="text" class="form-control" id="write_list" name="write_list">
-            <div class="form-text">Comma-separated list of users with write access</div>
+            <div class="form-text help-text">Comma-separated list of users with write access</div>
           </div>
           
           <div class="mb-3">
