fix edit group1

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -466,6 +466,13 @@
         </li>
         
         <li class="nav-item">
+          <a href="/groups" class="nav-link {{ 'active' if request.path == '/groups' }}">
+            <i class="bi bi-people-fill"></i>
+            <span>System Groups</span>
+          </a>
+        </li>
+        
+        <li class="nav-item">
           <a href="/global-settings" class="nav-link {{ 'active' if request.path == '/global-settings' }}">
             <i class="bi bi-gear"></i>
             <span>Global Settings</span>
