fix group colors

--- a/app/templates/groups.html
+++ b/app/templates/groups.html
@@ -28,8 +28,8 @@
       <div class="row align-items-center">
         <div class="col-md-6">
           <div class="d-flex align-items-center">
-            <i class="bi bi-people-fill me-2 text-secondary"></i>
-            <span>{{ group }}</span>
+            <i class="bi bi-people-fill me-2 text-primary"></i>
+            <span class="text-light">{{ group }}</span>
           </div>
         </div>
         <div class="col-md-6 text-end">
