--- a/app/templates/global_settings.html
+++ b/app/templates/global_settings.html
@@ -232,7 +232,7 @@
         <h5 class="mb-0">Configuration File</h5>
       </div>
       <div class="card-body">
-        <p class="text-muted mb-3">You can directly edit the Samba configuration file if you need advanced options not available in this interface.</p>
+        <p class="mb-3">You can directly edit the Samba configuration file if you need advanced options not available in this interface.</p>
         
         <div class="d-grid">
           <a href="/edit-config" class="btn btn-outline-primary">
