--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -530,7 +530,42 @@
           </a>
         </li>
         
+        <li class="nav-item">
+          <a href="/disk-usage" class="nav-link {{ 'active' if request.path == '/disk-usage' }}">
+            <i class="bi bi-hdd"></i>
+            <span>Disk Usage</span>
+          </a>
+        </li>
+        
+        <li class="nav-item">
+          <a href="/connections" class="nav-link {{ 'active' if request.path == '/connections' }}">
+            <i class="bi bi-pc-display"></i>
+            <span>Connections</span>
+          </a>
+        </li>
+        
+        <li class="nav-item">
+          <a href="/backups" class="nav-link {{ 'active' if request.path == '/backups' }}">
+            <i class="bi bi-file-earmark-zip"></i>
+            <span>Backups</span>
+          </a>
+        </li>
+        
+        <li class="nav-item">
+          <a href="/help" class="nav-link {{ 'active' if request.path == '/help' }}">
+            <i class="bi bi-question-circle"></i>
+            <span>Help</span>
+          </a>
+        </li>
+        
         {% if current_user.is_admin %}
+        <li class="nav-item">
+          <a href="{{ url_for('main.api_docs') }}" class="nav-link {{ 'active' if request.path == '/api/docs' }}">
+            <i class="bi bi-code-square"></i>
+            <span>API Docs</span>
+          </a>
+        </li>
+        
         <li class="nav-item">
           <a href="{{ url_for('auth.register') }}" class="nav-link {{ 'active' if request.path == url_for('auth.register') }}">
             <i class="bi bi-person-plus"></i>
@@ -560,6 +595,8 @@
           <i class="bi bi-chevron-down ms-auto"></i>
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
+          <li><a class="dropdown-item" href="/help"><i class="bi bi-question-circle me-2"></i> Help</a></li>
+          <li><hr class="dropdown-divider"></li>
           <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}"><i class="bi bi-box-arrow-right me-2"></i> Sign Out</a></li>
         </ul>
       </div>
